<resources>
    <string name="app_name">easybook</string>
    <string name="tab_bar_home">home</string>
    <string name="tab_bar_find">find</string>
    <string name="tab_bar_write_article">write</string>
    <string name="tab_bar_msg">message</string>
    <string name="tab_bar_mine">mine</string>
    <string name="comment">评论</string>
    <string name="message">简信</string>
    <string name="ask">投稿请求</string>
    <string name="likeandstar">喜欢和赞</string>
    <string name="follow">关注</string>
    <string name="appreciate">赞赏</string>
    <string name="othertip">其他提醒</string>
    <string name="dont_disturb">Do not disturb</string>
    <string name="dont_disturb_tip">开启后在设定时间段收到消息将不会震动或响铃</string>
    <string name="remind_mode">提醒方式</string>
    <string name="voice_tip">声音提示</string>
    <string name="push_project">推送项目</string>
    <string name="shock_tip">震动提示</string>
    <string name="select_push">精选推送</string>
    <string name="public_article">公开文章</string>
    <string name="private_article">私密文章</string>
    <string name="mark_article">收藏的文章</string>
    <string name="like_article">喜欢的文章</string>
    <string name="topic_article">我的专题</string>
    <string name="book_article">我的文集</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="night_mode">夜间模式</string>
    <string name="browse_record">浏览记录</string>
    <string name="to_app_score">给简书评分</string>
    <string name="share_app">分享简书</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_tip">写下您的需求和建议</string>
    <string name="feed_back_tip2">联系方式(微信\'QQ等)</string>
    <string name="recharge">充值</string>
    <string name="look_transaction_record">查看交易记录</string>
</resources>
