<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_msg_comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_comment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/comment"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/c_EAEAEA" />

            <LinearLayout
                android:id="@+id/ll_msg_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/message"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/c_EAEAEA" />

            <LinearLayout
                android:id="@+id/ll_msg_ask"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_ask" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/ask"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/c_EAEAEA" />

            <LinearLayout
                android:id="@+id/ll_msg_like_star"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_like_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/likeandstar"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/c_EAEAEA" />

            <LinearLayout
                android:id="@+id/ll_msg_like_follow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_follow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/follow"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/c_EAEAEA" />

            <LinearLayout
                android:id="@+id/ll_msg_like_appreciate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_appreciate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/appreciate"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:background="@color/c_EAEAEA" />

            <LinearLayout
                android:id="@+id/ll_msg_like_othertip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_clicked"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_msg_other" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/othertip"
                    android:textColor="@color/c_757575"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/c_EAEAEA" />
        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>